fix: readability in header

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -168,7 +168,7 @@ header {
 	background-position: center center;
 	.background-cover;
 	text-align: center;
-	color: @gray-darkest;
+	color: white;
   .intro-text {
     padding-top: 100px;
     padding-bottom: 50px;
@@ -185,7 +185,7 @@ header {
       font-size: 50px;
       line-height: 50px;
       margin-bottom: 25px;
-      text-shadow: 0px 0px 100px fade(white, 80%), 0px 0px 20px white;
+      text-shadow: 0px 0px 100px fade(@gray-darkest, 80%), 0px 0px 20px @gray-darkest;
 		}
 	}
 }
